# Coyote

./: program_fpga.tcl  setup_coyote.sh  shell.nix  teardown_coyote.sh
cmake/: FindCoyoteHW.cmake  FindCoyoteSW.cmake
driver/: Makefile
examples/13_loom/hw/: CMakeLists.txt
examples/13_loom/hw/src/: init_ip.tcl  vfpga_top.svh
examples/13_loom/hw/src/hdl/: loom_engine.sv  loom_orchestrator.sv  loom_pkg.sv  loom_reg_intf.sv  loom_router.sv
examples/13_loom/sw/: CMakeLists.txt
examples/13_loom/sw/src/: main.cpp
examples/13_loom/sw/src/client/: main.cpp
examples/13_loom/sw/src/include/: loom_regs.hpp
examples/13_loom/sw/src/server/: main.cpp
examples/jigsaw_baseline/: README.md
examples/jigsaw_baseline/hw/: CMakeLists.txt
examples/jigsaw_baseline/hw/src/: vfpga_top.svh
examples/jigsaw_baseline/hw/src/hdl/: computation_engine.sv  dma_engine.sv  jigsaw_baseline_axi_ctrl_parser.sv
examples/jigsaw_baseline/sw/src/: main.cpp  message.hpp  mmio_handler.cpp  mmio_handler.hpp  rdma_server.cpp  rdma_server.hpp  shmem.cpp  shmem.hpp
examples/jigsaw_baseline/sw_no_vm/src/: main.cpp  traces.hpp
examples/jigsaw_baseline_rdma/: README.md
examples/jigsaw_baseline_rdma/hw/: CMakeLists.txt
examples/jigsaw_baseline_rdma/sw/: CMakeLists.txt
examples/jigsaw_baseline_rdma/sw/src/: main.cpp
examples/jigsaw_baseline_rdma/sw_client_coyote_api/: CMakeLists.txt
examples/jigsaw_baseline_rdma/sw_client_coyote_api/src/: main.cpp
examples/jigsaw_baseline_rdma/sw_server_coyote_api/: CMakeLists.txt
examples/jigsaw_baseline_rdma/sw_server_coyote_api/src/: main.cpp
examples/jigsaw_device_controller/hw/: CMakeLists.txt
examples/jigsaw_device_controller/hw/src/: vfpga_top.svh  vfpga_top_send.svh
examples/jigsaw_device_controller/hw/src/hdl/: computation_engine.sv  jigsaw_dc_axi_ctrl_parser.sv  payload_to_dma.sv  payload_to_mmio.sv  txn_generator.sv
examples/jigsaw_device_controller/sw/: CMakeLists.txt
examples/jigsaw_device_controller/sw/src/: main.cpp
examples/jigsaw_host_controller/hw/: CMakeLists.txt
examples/jigsaw_host_controller/hw/src/: vfpga_top.svh  vfpga_top_send.svh
examples/jigsaw_host_controller/hw/src/hdl/: jigsaw_hc_axi_ctrl_parser.sv  jigsaw_host_controller.sv
examples/jigsaw_host_controller/sw/: CMakeLists.txt
examples/jigsaw_host_controller/sw/src/: main.cpp  shmem.cpp  shmem.hpp
examples/jigsaw_host_controller/sw_no_vm/: CMakeLists.txt
examples/jigsaw_host_controller/sw_no_vm/src/: main.cpp
examples/jigsaw_minus_nw/hw/: CMakeLists.txt
examples/jigsaw_minus_nw/hw/src/: vfpga_top.svh
examples/jigsaw_minus_nw/hw/src/hdl/: computation_engine.sv  jigsaw_host_controller.sv  jigsaw_minus_nw_axi_ctrl_parser.sv  payload_to_dma.sv  payload_to_mmio.sv  txn_generator.sv
examples/jigsaw_minus_nw/sw/: CMakeLists.txt
examples/jigsaw_minus_nw/sw/src/: main.cpp  shmem.cpp  shmem.hpp
examples/jigsaw_minus_nw/sw_no_vm/: CMakeLists.txt
examples/jigsaw_minus_nw/sw_no_vm/src/: main.cpp  traces.hpp
examples/jigsaw_sw_forwarder/: README.md
examples/jigsaw_sw_forwarder/common/: mailbox.hpp  messages.hpp  wire.hpp
examples/jigsaw_sw_forwarder/sw_device/: CMakeLists.txt
examples/jigsaw_sw_forwarder/sw_device/src/: main.cpp
examples/jigsaw_sw_forwarder/sw_device_selftest/: CMakeLists.txt
examples/jigsaw_sw_forwarder/sw_device_selftest/src/: main.cpp
examples/jigsaw_sw_forwarder/sw_host/: CMakeLists.txt
examples/jigsaw_sw_forwarder/sw_host/src/: main.cpp  shmem.cpp  shmem.hpp
examples/jigsaw_sw_forwarder/sw_host_no_vm/: CMakeLists.txt
examples/jigsaw_sw_forwarder/sw_host_no_vm/src/: main.cpp
hw/: examples.cmake
hw/hdl/operators/examples/bram_app/: bram_app_c0_0.svh  read_only_axi_ram.v
hw/hdl/operators/examples/io_switch_ndp/: eval_utilization.md  io_switch_ndp_c0_0.svh
hw/hdl/operators/examples/io_switch_tcp/: io_switch_tcp_c0_0.svh
hw/scripts/: example.tcl.in
hw/scripts/ip_inst/: network_stack.tcl
hw/scripts/wr_hdl/template_gen/: dynamic_wrapper.txt  user_wrapper.txt
hw/templates/: lynx_pkg_tmplt.txt
scc-experiments/: measure_complexity.sh
scripts/ip_inst/: network_infrastructure.tcl
sw/: CMakeLists.txt
sw/examples/coyote_host_app_template/: main.cpp
sw/examples/io_switch_ndp/: main.cpp
sw/examples/rng_host/: main.cpp
sw/include/: cProcess.hpp
sw/src/: cProcess.cpp
